test/corpus/dcgs.txt
============
Simplest DCG
============

foo --> [].

---

(source_file
  (dcg_definition head: (atom)
    body: (values (list))))

==================
DCG with arguments
==================

foo(X, Y) --> [X], "+", [Y].

---

(source_file
  (dcg_definition
    head: (term functor: (atom)
                arguments: (values (var) (var)))
    body: (values
            (list (values (var)))
            (string)
            (list (values (var))))))

================================
DCG with curly-braced statements
================================

bar(X) --> [Y], { X is Y + 1 }, [X].

---

(source_file
  (dcg_definition
    head: (term functor: (atom)
                arguments: (values (var)))
    body: (values
            (list (values (var)))
            (curly_braced
              (values
                (binary_op lhs: (var) operator: (atom)
                  rhs: (binary_op lhs: (var) operator: (atom)
                         rhs: (number)))))
            (list (values (var))))))

=====================
DCG with semi-context
=====================

foo(5, X), [Foo, Bar] -->
  [Foo], [X], [Bar].

---

(source_file
  (dcg_definition
     head: (term functor: (atom)
                 arguments: (values (number) (var)))
     semicontext: (list (values (var) (var)))
     body: (values
       (list (values (var)))
       (list (values (var)))
       (list (values (var))))))

=======================
DCG with semi-context 2
=======================

foo(5, X), Baz -->
  [Foo], [X], [Bar], { Baz #= Foo + Bar }.

---

(source_file
  (dcg_definition
     head: (term functor: (atom)
                 arguments: (values (number) (var)))
     semicontext: (var)
     body: (values
       (list (values (var)))
       (list (values (var)))
       (list (values (var)))
       (curly_braced
         (values
           (binary_op
             lhs: (var)
             operator: (atom)
             rhs: (binary_op lhs: (var) operator: (atom) rhs: (var))))))))

===============================
Module-qualified DCG definition
===============================

prolog:message(foo(bar, X)) -->
  { beep(bar) },
  [ [ 'foo ~w' ]-["aoeu"] ].

---

(source_file
  (dcg_definition
    module: (atom)
    head: (term functor: (atom)
                arguments: (values
                            (term functor: (atom)
                                  arguments: (values (atom) (var)))))
    body: (values
            (curly_braced (values (term functor: (atom) arguments: (values (atom)))))
            (list
              (values
               (binary_op
                 lhs: (list (values (atom)))
                 operator: (atom)
                 rhs: (list (values (string)))))))))
